--- a/PagWeb.html
+++ b/PagWeb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title> Bienvenidos al Parcial II De Programacion </title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
     <style type="text/css">
@@ -27,6 +27,7 @@
         <div id="canvas-container">
             <canvas id="canvas" width="28" height="28"></canvas>
         </div>
+        <title>Resultado</title>
         <div id="resultado"></div>
     </div>
 
