--- a/Usuario/user_user.html
+++ b/Usuario/user_user.html
@@ -1,4 +1,65 @@
-<div id="card_usuario" class="card text-white bg-dark mb-3">
+<<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aplicacion de AGRO HELPING</title>
+    
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" 
+        integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="Usuario/user_user.html">::.. APP AGRO HELPING..::</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mnxAppAcademica"
+                    aria-controls="mnxAppAcademica" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mnxAppAcademica">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" data-modulo="usuario" data-formulario="usuario" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-modulo="docente" data-formulario="docente" href="#"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-modulo="materia" data-formulario="materia" href="#"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-modulo="nota" data-formulario="nota" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col col-md-6 alert-dismissible fade show position-absolute" id="index"></div>
+            <div class="col col-md-6 alert-dismissible fade show position-absolute" id="alumno_buscar"></div>
+            <div class="col col-md-6 alert-dismissible fade show position-absolute" id="docente_docente"></div>
+            <div class="col col-md-6 alert-dismissible fade show position-absolute" id="docente_buscar"></div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" 
+        integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+    <script src="main.js"></script>
+    <html lang="en">
+        </head>
+
+    <div id="card_usuario" class="card text-white bg-dark mb-3">
     <div class="card-header">
         REGISTRO USUARIOS 
     
@@ -45,7 +106,7 @@
                 accion : "eliminar",
                 idUsuario: usuarios.idUsuario
             };
-            $.post("http://localhost:3000/usuarios", JSON.stringify(datos), (data, status)=>{
+            $.post("http://localhost:3306/usuarios", JSON.stringify(datos), (data, status)=>{
                 limpiarFormulario();
                 mostrarMsg(data.resp);
                 obtenerDatosUsuarios();
